--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,34 @@
-/*# sourceMappingURL=main.css.map */
+body {
+  font-family: "Roboto", "Raleway", "sans-serif";
+  color: #212121;
+  background: #FFFFFF;
+}
+
+h1,
+h2,
+h3,
+p,
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+.list {
+  list-style: none;
+}
+
+.link {
+  text-decoration: none;
+}
+
+.card {
+  display: block;
+}
+
+.container {
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-right: auto;
+  margin-left: auto;
+}/*# sourceMappingURL=main.css.map */
