--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,31 @@
 @import './utils/variables';
 @import './utils/utilities';
 @import './components/container';
+@import './components/section';
+@import './components/studio/backdrop';
+@import './components/studio/modal';
+@import './components/studio/modal-btn';
+@import './components/studio/modal-form';
+@import './components/studio/modal-form-btn';
+@import './components/page-header';
+@import './components/page-footer';
+@import './components/logo';
+@import './components/header-nav';
+@import './components/header-contacts';
+@import './components/studio/hero';
+@import './components/studio/hero-btn';
+@import './components/studio/benefits';
+@import './components/studio/features';
+@import './components/studio/team';
+@import './components/studio/teammates';
+@import './components/studio/teammates-socials';
+@import './components/studio/clients';
+@import './components/footer-address';
+@import './components/footer-contacts';
+@import './components/footer-socials';
+@import './components/footer-newsletter';
+@import './components/footer-form';
+@import './components/footer-btn';
+@import './components/portfolio/portfolio-btns';
+@import './components/portfolio/projects';
+@import './components/portfolio/overlay';
