--- a/sass/components/_page-footer.scss
+++ b/sass/components/_page-footer.scss
@@ -5,7 +5,7 @@
     background: getColor('bg-footer-color');
 }
 
-.footer-content {
+.footer--position {
     display: flex;
     align-items: baseline;
 }
