--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -2,7 +2,7 @@
     border-bottom: 1px solid getColor('border-header');
 }
 
-.main-nav {
+.header--position {
     display: flex;
     align-items: center;
 }
