--- a/sass/components/studio/_modal.scss
+++ b/sass/components/studio/_modal.scss
@@ -19,7 +19,36 @@
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-title {
+.modal__btn--close {
+    position: absolute;
+    top: 8px;
+    right: 8px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 30px;
+    height: 30px;
+    padding: 0;
+
+    color: getColor('black-text-color');
+    background-color: getColor('primary-bg-color');
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 50%;
+    cursor: pointer;
+
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:hover {
+        color: getColor('blue-text-color');
+    }
+}
+
+.x-close {
+    fill: currentColor;
+}
+
+.modal__title {
     margin-right: auto;
     margin-left: auto;
     margin-bottom: 12px;
