--- a/sass/components/studio/_teammates.scss
+++ b/sass/components/studio/_teammates.scss
@@ -1,27 +1,27 @@
 .teammates {
     display: flex;
-
-    & .item {
-        width: 270px;
-        
-        background: getColor('primary-bg-color');
-        box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
-            0px 1px 1px rgba(0, 0, 0, 0.14),
-            0px 2px 1px rgba(0, 0, 0, 0.2);
-        border-radius: 0px 0px 4px 4px;
-        text-align: center;
-    }
-
-    & .item + .item {
-        margin-left: 30px;
-    }
 }
 
-.name-position {
+.teammates__item {
+    width: 270px;
+    
+    background: getColor('primary-bg-color');
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
+        0px 1px 1px rgba(0, 0, 0, 0.14),
+        0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+    text-align: center;
+}
+
+.teammates__item + .teammates__item {
+    margin-left: 30px;
+}
+
+.teammates__position-name {
     padding: 30px 0;
 }
 
-.name {
+.teammates__name {
     margin-bottom: 10px;
 
     font-size: 16px;
@@ -30,7 +30,7 @@
     letter-spacing: 0.03em;
 }
 
-.position {
+.teammates__position {
     margin-bottom: 16px;
 
     color: getColor('contacts-header-color');
