--- a/sass/components/_header-contacts.scss
+++ b/sass/components/_header-contacts.scss
@@ -1,14 +1,14 @@
-.contacts-header {
+.header__contacts {
     display: flex;
     margin-left: auto;
-
-    & .item + .item {
-        margin-left: 40px;
-    }
 }
 
-.mail-header,
-.tel-header {
+.header__contacts-item + .header__contacts-item {
+    margin-left: 40px;
+}
+
+.header__mail,
+.header__tel {
     display: flex;
     align-items: center;
     padding-top: 10px;
@@ -22,12 +22,13 @@
 
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-    &:hover, &:focus {
+    &:hover,
+    &:focus {
         color: getColor('blue-text-color');
     }
 }
 
-.header-icon {
+.header__contacts-icon {
     fill: currentColor;
     margin-right: 10px;
 }
