--- a/sass/components/_header-nav.scss
+++ b/sass/components/_header-nav.scss
@@ -1,17 +1,17 @@
-.header-list {
+.header__navigation-list {
     display: flex;
     margin-left: 93px;
+}
 
-    & .item {
-        position: relative;
-    }
+.header__navigation-item {
+    position: relative;
 
-    & .item:not(:last-child) {
+    &:not(:last-child) {
         margin-right: 50px;
     }
 }
 
-.header-link {
+.header__navigation-link {
     display: block;
     padding-top: 32px;
     padding-bottom: 32px;
@@ -26,12 +26,14 @@
 
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-    &:hover, &:focus, &:active {
+    &:hover,
+    &:focus,
+    &:active {
         color: getColor('blue-text-color');
     }
 }
 
-.active-page::after {
+.header__navigation-link--active::after {
     position: absolute;
     content: '';
     width: 100%;
