--- a/sass/components/portfolio/_portfolio-btns.scss
+++ b/sass/components/portfolio/_portfolio-btns.scss
@@ -1,14 +1,14 @@
-.btns {
+.portfolio-btn {
     margin-bottom: 50px;
     display: flex;
     justify-content: center;
-
-    & .item + .item {
-        margin-left: 8px;
-    }
 }
 
-.portfolio-button {
+.portfolio-btn__item + .portfolio-btn__item {
+    margin-left: 8px;
+}
+
+.portfolio-btn__body {
     padding: 6px 22px;
 
     font-family: 'Roboto';
