--- a/sass/components/portfolio/_projects.scss
+++ b/sass/components/portfolio/_projects.scss
@@ -1,37 +1,37 @@
-.list-projects {
+.project {
     display: flex;
     flex-wrap: wrap;
+}
 
-    & .item {
-        flex-basis: calc((100% - 60px) / 3);
-        margin-right: 30px;
-        margin-bottom: 30px;
+.project__item {
+    flex-basis: calc((100% - 60px) / 3);
+    margin-right: 30px;
+    margin-bottom: 30px;
     
-        transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    }
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-    & .item:nth-child(3n) {
+    &:nth-child(3n) {
         margin-right: 0;
     }
 
-    & .item:nth-last-child(-n+3) {
+    &:nth-last-child(-n+3) {
         margin-bottom: 0;
     }
 
-    & .item:hover {
+    &:hover {
         box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
             0px 4px 4px rgba(0, 0, 0, 0.06),
             1px 4px 6px rgba(0, 0, 0, 0.16);
     }
 }
 
-.content {
+.project__content {
     margin-top: -5px;
     padding: 20px 24px;
     border: 1px solid getColor('border-project-photo');
 }
 
-.project {
+.project__title {
     margin-bottom: 4px;
 
     font-size: 18px;
@@ -39,7 +39,7 @@
     letter-spacing: 0.06em;
 }
 
-.description {
+.project__description {
     color: getColor('contacts-header-color');
     font-size: 16px;
     line-height: 1.88;
