--- a/sass/components/studio/_hero.scss
+++ b/sass/components/studio/_hero.scss
@@ -18,7 +18,7 @@
     text-align: center;
 }
 
-.title {
+.hero__title {
     margin-top: 0;
     margin-bottom: 30px;
     max-width: 700px;
@@ -31,4 +31,29 @@
     font-weight: 900;
     line-height: 1.36;
     letter-spacing: 0.06em;
+}
+
+.hero__btn {
+    display: inline-block;
+    padding: 10px 24px;
+
+    font-family: 'Roboto';
+    color: getColor('primary-bg-color');
+    background-color: getColor('blue-text-color');
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 1.88;
+    letter-spacing: 0.06em;
+
+    border: 1px solid transparent;
+    border-radius: 4px;
+    cursor: pointer;
+
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:hover,
+    &:focus {
+        background-color: getColor('button-focus-color');
+    }
 }
