--- a/sass/components/studio/_modal-form.scss
+++ b/sass/components/studio/_modal-form.scss
@@ -1,16 +1,16 @@
-.form {
+.modal__form {
     margin-right: auto;
     margin-left: auto;
     width: 448px;
 }
 
-.form-field {
+.modal__field {
     display: block;
     margin-bottom: 10px;
     font-size: inherit;
 }
 
-.form-label {
+.modal__label {
     display: block;
     margin-bottom: 4px;
 
@@ -20,7 +20,7 @@
     letter-spacing: 0.01em;
 }
 
-.form-input {
+.modal__input {
     width: 100%;
     padding: 12px 12px 12px 42px;
     outline: none;
@@ -34,21 +34,22 @@
 
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-    &:focus-within ~ .form-icon,
-    &:hover ~ .form-icon {
+    &:focus-within ~ .modal__icon,
+    &:hover ~ .modal__icon {
         color: getColor('blue-text-color');
     }
 
-    &:hover, &:focus {
+    &:hover, 
+    &:focus {
         border-color: getColor('blue-text-color');
     }
 }
 
-.thumb {
+.modal__thumb {
     position: relative;
 }
 
-.form-icon {
+.modal__icon {
     position: absolute;
     top: 50%;
     left: 12px;
@@ -57,7 +58,7 @@
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.form-textarea {
+.modal__textarea {
     resize: none;
     width: 100%;
     height: 120px;
@@ -78,22 +79,23 @@
         color: getColor('form-placeholder');
     }
 
-    &:hover, &:focus {
+    &:hover, 
+    &:focus {
         border-color: getColor('blue-text-color');
     }
 }
 
-.form-checkbox {
+.modal__checkbox {
     appearance: none;
+}
 
-    &:checked + .checkbox-icon {
-        border-color: getColor('blue-text-color');
-        background-color: getColor('blue-text-color');
-        background-image: url('../images/icons/check.svg');
-        background-position: center;
-        background-repeat: no-repeat;
-        background-origin: border-box;
-    }
+.modal__checkbox:checked + .modal__checkbox-icon {
+    border-color: getColor('blue-text-color');
+    background-color: getColor('blue-text-color');
+    background-image: url('../images/icons/check.svg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-origin: border-box;
 }
 
 .checkbox {
@@ -103,7 +105,7 @@
     margin-bottom: 30px;
 }
 
-.checkbox-icon {
+.modal__checkbox-icon {
     display: inline-block;
     width: 15px;
     height: 15px;
@@ -115,7 +117,7 @@
         background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.form-terms {
+.modal__terms {
     display: inline-block;
     margin-left: 7px;
     width: 400px;
@@ -127,6 +129,6 @@
 
 }
 
-.form-contract {
+.modal__contract {
     color: getColor('blue-text-color');
 }
